trying to fix address bar on mobile

--- a/SliderPuzzle/custom.css
+++ b/SliderPuzzle/custom.css
@@ -3,15 +3,15 @@
     color: white;
   }
 
-  html {
-    height: 100%;
-  }
-
   body {
     background-color: black;
     touch-action: none;
-    margin: 2px;
-    padding: 0;
+    margin: 0;
+    padding: 2px;
+    position: fixed;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
   }
    
   h1 {
@@ -93,7 +93,7 @@
 
   #clicks {
     position: fixed;
-    bottom: 0px;
+    bottom: 1px;
     right: 2px;
     font-size: 10px;
     margin: 1px;
